feat: add testing capabilities and improve SmartPhoneCard component
- Added Jest and React Testing Library for unit testing.
- Implemented tests for SmartPhoneCard component to verify rendering and image loading behavior.
- Enhanced SmartPhoneCard with loading state management for images.
- Introduced SmartPhoneGrid component with responsive grid layout for displaying multiple SmartPhoneCard components.
- Updated package.json to include necessary dependencies for testing.
- Added CSS styles for SmartPhoneGrid layout.
- Modified SmartPhoneCard styles to include a border for better visual separation.
- Updated TypeScript configuration to target ES6 and use CommonJS modules.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "audit": "^0.0.6",
@@ -17,11 +18,18 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.14.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "typescript": "latest"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3"
   }
 }
