--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.74.4",
     "audit": "^0.0.6",
+    "dotenv": "^16.5.0",
     "fix": "^0.0.3",
     "next": "13.5.6",
     "npm": "^11.3.0",
