--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "22.14.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
